jsinterop-ts-defs-test/src/test/resources/errors/ctors/JsTypeWithSingleConstructors.java
package com.vertispan.tsdefs.tests.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithSingleConstructors {

    public JsTypeWithSingleConstructors(){
    }

}